--- a/style.css
+++ b/style.css
@@ -3,3 +3,50 @@ body {
   height: 100%;
   margin: 0;
 }
+
+.header > h1{
+  justify-content: center;
+  display: flex;
+}
+
+.nav-bar {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+}
+
+.nav-bar a {
+  background-color: rgb(207, 200, 200);
+  margin: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
+img {
+  display: block;
+  margin: 0 auto;
+ 
+
+}
+
+#featured-property  {
+text-align: center;
+
+
+}
+
+#featured-property p {
+  margin-left: 400px;
+  margin-right: 400px;
+}
+
+#details {
+ 
+  background-color: red;
+  display: flex;
+  justify-content: space-around;
+}
+
+
